# CrazyFrictionSim

./: .pre-commit-config.yaml  README.md
.github/workflows/: build.yml  nix-build.yml  python-build.yml  wasm-build.yml
fem_simulation/: Cargo.toml  Dockerfile  build.rs  wrapper.h
fem_simulation/src/: lib.rs  main.rs
fem_simulation/src/config/: json_config.rs  mod.rs  yaml_config.rs
fem_simulation/src/fem/: solver.rs
fem_simulation/src/io/: mod.rs  mpi.rs  redis.rs
fem_simulation/src/linear_solvers/: amg.rs  mod.rs
fem_simulation/src/wasm/: mod.rs
fem_simulation/tests/: integration_test.rs  wasm_tests.rs
nix/: default.nix
python/: config.py
python/tests/: test_config.py
scripts/: install.sh
simulation/: Cargo.toml
simulation/src/: lib.rs  python.rs  wasm.rs
simulation/src/cli/: main.rs
simulation/src/config/: boundary_condition.rs  contact.rs  geometry.rs  material.rs  mod.rs  output.rs  simulation_data.rs  time_settings.rs
simulation/tests/config/: boundary_conditions.rs  contact.rs  geometry.rs  output.rs  simulation_data.rs
simulation/tests/config/examples/: multiple_materials_boundary_conditions.yaml
wasm/: config.js
