[package]
name = "fem_simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
rsmpi = "0.7"
redis = { version = "0.21", features = ["async-std-comp"] } 
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[build-dependencies]
bindgen = "0.59"

[dev-dependencies]
assert_cmd = "2.0"
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
