[package]
name = "simulation"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
mpi = { version = "0.8.0", features = ["user-operations", "derive"] }
redis = { version = "0.27.5", features = ["async-std-comp"] } 
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
libc = "0.2.161"
eqsolver = "0.2.0"
tokio = { version = "1.41.0", features = ["full"] }
pyo3 = { version = "0.22.5", features = ["extension-module"] }
maturin = "1.7.4"
argmin = "0.10.0"
ndarray = "0.16.1"
cust = "0.3.2"

[build-dependencies]
bindgen = "0.70.1"
cmake = "0.1.51"

[dev-dependencies]
assert_cmd = "2.0.16"
wasm-bindgen-test = "0.3.45"

[lib]
crate-type = ["cdylib", "rlib"]
